@@ -10,6 +10,7 @@ Change log
 
 v0.3.3
 
+[B][pipeline] Fixed race condition on accessing num_of_outputs of a matched entry 
 [B][pipeline] Fixed critical bugs related to of1x_modify_flow_entry_loop(): i) improper behaviour according to spec ii) leak when no rules were modified iii) corruption of state when more than one flow was modified
 
 v0.3.2.1
